--- a/views/coverage.ejs
+++ b/views/coverage.ejs
@@ -22,15 +22,12 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify"></script>
+    <script src="/browserify?libs=branding,coverage,markers,util"></script>
     <script>
       var b = require( 'branding' );
       var c = require( 'coverage' );
       var m = require( 'markers' );
-      var _ = require( 'underscore' );
       var u = require( 'util' );
-      var $ = require( 'jquery' );
-      var i = require( 'socket.io' );
     </script>
     <script>
       m( {
