--- a/views/drawing.ejs
+++ b/views/drawing.ejs
@@ -23,12 +23,10 @@
 </head>
 <body>
   <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-  <script src="/browserify"></script>
+  <script src="/browserify?libs=branding,io,util"></script>
   <script>
     var b = require( 'branding' );
-    var _ = require( 'underscore' );
     var u = require( 'util' );
-    var $ = require( 'jquery' );
     var i = require( 'socket.io' );
   </script>
   <script>
