--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -24,14 +24,11 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify"></script>
+    <script src="/browserify?libs=branding,markers,underscore"></script>
     <script>
       var b = require( 'branding' );
       var m = require( 'markers' );
       var _ = require( 'underscore' );
-      var u = require( 'util' );
-      var $ = require( 'jquery' );
-      var i = require( 'socket.io' );
     </script>
     <script>
 
@@ -147,12 +144,11 @@
                 }
               }
 
+              overlays[type].addLayer(
+                  new L.PieChartMarker( layer.getLatLng(), options )
+              );
+
             } );
-
-            overlays[type].addLayer(
-                new L.PieChartMarker( layer.getLatLng(), options )
-            );
-
             //overlays[type].addLayer(
             //  new L.BarChartMarker( layer.getLatLng(), optionsT )
             //);
@@ -170,8 +166,8 @@
       L.control.scale( { imperial: false } ).addTo( map );
 
       var underlays = {
-        "emap": L.tileLayer( c + 'mapscape' + f, { maxZoom: 18 } ).addTo( map ),
-        "vicmap": L.tileLayer( c + 'vicmap' + f, { maxZoom: 18 } ).addTo( map ),
+        //"emap": L.tileLayer( c + 'mapscape' + f, { maxZoom: 18 } ).addTo( map ),
+        //"vicmap": L.tileLayer( c + 'vicmap' + f, { maxZoom: 18 } ).addTo( map ),
         "arcgis": L.tileLayer( b + g, { maxZoom: 19 } ).addTo( map )
       };
 
