--- a/views/search.ejs
+++ b/views/search.ejs
@@ -23,13 +23,9 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify"></script>
+    <script src="/browserify?libs=branding"></script>
     <script>
       var b = require( 'branding' );
-      var _ = require( 'underscore' );
-      var u = require( 'util' );
-      var $ = require( 'jquery' );
-      var i = require( 'socket.io' );
     </script>
     <script>
       var b = "http://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile";
