--- a/views/temporal.ejs
+++ b/views/temporal.ejs
@@ -22,14 +22,10 @@
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
     <!--<script src="/dist/bundle.js"></script>-->
-    <script src="/browserify"></script>
+    <script src="/browserify?libs=branding,time"></script>
     <script>
       var b = require( 'branding' );
       var t = require( 'time' );
-      var _ = require( 'underscore' );
-      var u = require( 'util' );
-      var $ = require( 'jquery' );
-      var i = require( 'socket.io' );
     </script>
     <script>
       var a = "http://emap.dse.vic.gov.au/ArcGIS/rest/services/mapscape/MapServer/tile";
