--- a/views/tracking.ejs
+++ b/views/tracking.ejs
@@ -20,19 +20,16 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <!--<script src="/dist/bundle.js"></script>-->
-    <script src="/browserify"></script>
+    <script src="/browserify?libs=branding,io"></script>
     <script>
       var b = require( 'branding' );
-      var t = require( 'time' );
-      var _ = require( 'underscore' );
-      var u = require( 'util' );
-      var $ = require( 'jquery' );
       var i = require( 'socket.io' );
     </script>
     <script>
 
       var a = "http://emap.dse.vic.gov.au/ArcGIS/rest/services/mapscape/MapServer/tile";
+      var b = "http://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/";
+
       var c = "http://" + document.location.hostname + ":8888/";
       var f = '/{z}/{x}/{y}.png';
       var g = '/{z}/{y}/{x}.png';
@@ -44,7 +41,7 @@
       L.control.scale( { imperial: false } ).addTo( map );
 
       var underlays = {
-        "arcgis": L.tileLayer( a + g, { maxZoom: 18 } ).addTo( map )
+        "arcgis": L.tileLayer( b + g, { maxZoom: 18 } ).addTo( map )
       };
 
       var overlays = {
